# smas

./: Cargo.toml  README.md
resources/: amed015.txt  astd015.txt  rmed015.txt  rstd015.txt  smat.txt
src/: io.rs  lib.rs  main.rs  matrices.rs  solve.rs  util.rs  wasm_api.rs
